Change rating system to use QSpinBox with number incrementer. Add rating field to Bank local table. Fix issue with tags/cats updater. Some additions/changed to the default sizes and preference saving. Add error for catching versioned rating updates.

--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -2773,7 +2773,7 @@
                  <number>1</number>
                 </property>
                 <property name="columnCount">
-                 <number>4</number>
+                 <number>5</number>
                 </property>
                 <attribute name="horizontalHeaderCascadingSectionResizes">
                  <bool>true</bool>
@@ -2811,10 +2811,15 @@
                 </column>
                 <column>
                  <property name="text">
+                  <string>Rating</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
                   <string>Add to Bank</string>
                  </property>
                 </column>
-                <item row="0" column="3">
+                <item row="0" column="4">
                  <property name="text">
                   <string/>
                  </property>
