--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -753,54 +753,46 @@
                           </widget>
                          </item>
                          <item>
-                          <widget class="QPushButton" name="btn_next_page">
-                           <property name="sizePolicy">
-                            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-                             <horstretch>0</horstretch>
-                             <verstretch>0</verstretch>
-                            </sizepolicy>
-                           </property>
-                           <property name="toolTip">
-                            <string>Click here to view the next page in the selected patch.</string>
-                           </property>
-                           <property name="statusTip">
-                            <string>Click here to view the next page in the selected patch.</string>
-                           </property>
-                           <property name="accessibleName">
-                            <string>Next viz page Local Storage View</string>
-                           </property>
-                           <property name="accessibleDescription">
-                            <string>Navigates to the next page in the visualizer for the selected patch.</string>
-                           </property>
-                           <property name="text">
-                            <string>Next Page -&gt;</string>
-                           </property>
-                          </widget>
-                         </item>
-                         <item>
-                          <widget class="QPushButton" name="btn_prev_page">
-                           <property name="sizePolicy">
-                            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-                             <horstretch>0</horstretch>
-                             <verstretch>0</verstretch>
-                            </sizepolicy>
-                           </property>
-                           <property name="toolTip">
-                            <string>Click here to view the previous page in the selected patch.</string>
-                           </property>
-                           <property name="statusTip">
-                            <string>Click here to view the previous page in the selected patch.</string>
-                           </property>
-                           <property name="accessibleName">
-                            <string>Previous viz page Local Storage View</string>
-                           </property>
-                           <property name="accessibleDescription">
-                            <string>Navigates to the previous page in the visualizer for the selected patch.</string>
-                           </property>
-                           <property name="text">
-                            <string>&lt;- Prev. Page</string>
-                           </property>
-                          </widget>
+                          <layout class="QHBoxLayout" name="horizontalLayout_19">
+                           <item>
+                            <widget class="QPushButton" name="btn_prev_page">
+                             <property name="toolTip">
+                              <string>Click here to view the previous page in the selected patch.</string>
+                             </property>
+                             <property name="statusTip">
+                              <string>Click here to view the previous page in the selected patch.</string>
+                             </property>
+                             <property name="whatsThis">
+                              <string>Previous viz page Local Storage View</string>
+                             </property>
+                             <property name="accessibleName">
+                              <string>Navigates to the previous page in the visualizer for the selected patch.</string>
+                             </property>
+                             <property name="text">
+                              <string>Page -</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item>
+                            <widget class="QPushButton" name="btn_next_page">
+                             <property name="toolTip">
+                              <string>Click here to view the next page in the selected patch.</string>
+                             </property>
+                             <property name="statusTip">
+                              <string>Click here to view the next page in the selected patch.</string>
+                             </property>
+                             <property name="accessibleName">
+                              <string>Next viz page Local Storage View</string>
+                             </property>
+                             <property name="accessibleDescription">
+                              <string>Navigates to the next page in the visualizer for the selected patch.</string>
+                             </property>
+                             <property name="text">
+                              <string>Page +</string>
+                             </property>
+                            </widget>
+                           </item>
+                          </layout>
                          </item>
                         </layout>
                        </item>
@@ -1406,6 +1398,25 @@
                      </item>
                     </layout>
                    </widget>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="back_btn">
+                   <property name="toolTip">
+                    <string>Click here to view the patch-level details.</string>
+                   </property>
+                   <property name="statusTip">
+                    <string>Click here to view the patch-level details.</string>
+                   </property>
+                   <property name="accessibleName">
+                    <string>Back button viz Local Storage View</string>
+                   </property>
+                   <property name="accessibleDescription">
+                    <string>Navigates the display back to the patch-level details if you are within a module.</string>
+                   </property>
+                   <property name="text">
+                    <string>Reset</string>
+                   </property>
                   </widget>
                  </item>
                 </layout>
