--- a/zoia_lib/UI/resources/light.css
+++ b/zoia_lib/UI/resources/light.css
@@ -49,7 +49,9 @@ QHeaderView {
     color: #000;
 }
 
-QPushButton#btn_load_bank {
+QPushButton#btn_load_bank,
+QPushButton#btn_export_bank
+{
     padding: 2px 25px 2px 25px;
     border: 1px solid black;
 }
@@ -59,7 +61,8 @@ QPushButton#import_all_btn,
 QPushButton#import_all_ver_btn,
 QPushButton#btn_dwn_all,
 QPushButton#btn_prev_page,
-QPushButton#btn_next_page {
+QPushButton#btn_next_page,
+QPushButton#set_export_dir_btn {
     border-radius: 5px;
     padding: 2px 2px 2px 2px;
     border: 1px solid black;
@@ -82,7 +85,7 @@ QPushButton#update_patch_notes {
 
 QPushButton#refresh_pch_btn,
 QPushButton#check_for_updates_btn,
-QPushButton#btn_export_bank {
+QPushButton#btn_clear_bank {
     border-top-right-radius: 10px 5px;
     padding: 2px 5px 2px 5px;
     border: 1px solid black;
@@ -121,7 +124,8 @@ QPushButton#import_all_btn:hover, QPushButton#update_patch_notes:hover,
 QPushButton#btn_save_bank:hover, QPushButton#btn_load_bank:hover,
 QPushButton#btn_export_bank:hover, QPushButton#check_for_updates_btn:hover,
 QPushButton#delete_folder_sd_btn:hover, QPushButton#btn_dwn_all:hover,
-QPushButton#btn_prev_page:hover, QPushButton#btn_next_page:hover {
+QPushButton#btn_prev_page:hover, QPushButton#btn_next_page:hover,
+QPushButton#set_export_dir_btn:hover, QPushButton#btn_clear_bank:hover {
     background-color: #d9ebf9;
 }
 
@@ -135,7 +139,8 @@ QPushButton#import_all_btn:disabled, QPushButton#update_patch_notes:disabled,
 QPushButton#btn_save_bank:disabled, QPushButton#btn_load_bank:disabled,
 QPushButton#btn_export_bank:disabled, QPushButton#check_for_updates_btn:disabled,
 QPushButton#delete_folder_sd_btn:disabled, QPushButton#btn_prev_page:disabled,
-QPushButton#btn_next_page:disabled {
+QPushButton#btn_next_page:disabled, QPushButton#set_export_dir_btn:disabled,
+QPushButton#btn_clear_bank:disabled {
     background-color: #c1c1c1;
     border: 0;
     color: #545b66;
@@ -197,7 +202,8 @@ QPushButton#update_patch_notes, QPushButton#btn_save_bank,
 QPushButton#btn_load_bank, QPushButton#btn_export_bank,
 QPushButton#check_for_updates_btn, QPushButton#delete_folder_sd_btn,
 QPushButton#btn_dwn_all, QPushButton#btn_next_page,
-QPushButton#btn_prev_page {
+QPushButton#btn_prev_page, QPushButton#set_export_dir_btn,
+QPushButton#btn_export_bank, QPushButton#btn_clear_bank {
     background-color: #eaeaea;
     color: #000;
 }
